--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.11",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
